@@ -1,0 +1,25 @@
+<div class="deformFileupload"
+     tal:define="oid oid|field.oid;
+                 size size|field.widget.size;
+                 css_class css_class|field.widget.css_class">
+
+  ${field.start_mapping()}
+
+  <div class="deformReplaces" tal:condition="cstruct.get('uid')">
+
+    <input type="hidden" name="uid" value="${cstruct['uid']}"
+           id="${oid}-uid"/>
+    <span tal:content="cstruct.get('filename')"
+          id="${oid}-filename"/>
+
+  </div>
+
+  <input type="file" name="upload" 
+         accept="image/*" capture="camera"
+         tal:attributes="size size;
+                         class css_class"
+         id="${oid}"/>
+
+  ${field.end_mapping()}
+
+</div>
