@@ -4,6 +4,8 @@ Changelog
 0.1-dev (unreleased)
 --------------------
 
+- Add image_upload deform widget.
+  [davidjb]
 - Add force SSL option to auth links.
   [davidjb]
 - Add extra deform widgets for use within applications.
